--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@types/node": "^18.0.0",
     "@types/react": "^18.0.14",
     "@types/react-dom": "^18.0.5",
+    "@types/reactcss": "^1.2.6",
     "bootstrap": "^5.1.3",
     "bootstrap-icons": "^1.8.3",
     "react": "^18.2.0",
@@ -60,6 +61,8 @@
   "devDependencies": {
     "@babel/plugin-syntax-top-level-await": "^7.14.5",
     "@tauri-apps/cli": "^1.0.0",
-    "cross-env": "^7.0.3"
+    "@types/react-color": "^3.0.6",
+    "cross-env": "^7.0.3",
+    "react-color": "^2.19.3"
   }
 }
