--- a/public/manifest.json
+++ b/public/manifest.json
@@ -4,8 +4,8 @@
   "icons": [
     {
       "src": "favicon.ico",
+      "type": "image/x-icon",
       "sizes": "64x64 32x32 24x24 16x16",
-      "type": "image/x-icon"
     },
     {
       "src": "logo192.png",
@@ -18,7 +18,8 @@
       "sizes": "512x512"
     }
   ],
-  "start_url": ".",
+  "start_url": "./index.html",
+  "scope": "./index.html",
   "display": "standalone",
   "theme_color": "#000000",
   "background_color": "#ffffff"
