--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "@types/react": "^18.0.14",
     "@types/react-dom": "^18.0.5",
     "@types/reactcss": "^1.2.6",
-    "bootstrap": "^5.1.3",
+    "autoprefixer": "10.4.5",
+    "bootstrap": "^5.2.0-beta1",
     "bootstrap-icons": "^1.8.3",
     "react": "^18.2.0",
     "react-bootstrap": "^2.4.0",
@@ -39,6 +40,9 @@
     "sass": "^1.53.0",
     "typescript": "^4.7.4",
     "web-vitals": "^2.1.4"
+  },
+  "overrides": {
+    "autoprefixer": "10.4.5"
   },
   "eslintConfig": {
     "extends": [
