--- a/package.json
+++ b/package.json
@@ -29,20 +29,14 @@
     "@types/react": "^18.0.14",
     "@types/react-dom": "^18.0.5",
     "@types/reactcss": "^1.2.6",
-    "autoprefixer": "10.4.5",
-    "bootstrap": "^5.2.0-beta1",
-    "bootstrap-icons": "^1.8.3",
     "react": "^18.2.0",
-    "react-bootstrap": "^2.4.0",
     "react-dom": "^18.2.0",
     "react-error-boundary": "^3.1.4",
+    "react-icons": "^4.4.0",
     "react-scripts": "5.0.1",
     "sass": "^1.53.0",
     "typescript": "^4.7.4",
     "web-vitals": "^2.1.4"
-  },
-  "overrides": {
-    "autoprefixer": "10.4.5"
   },
   "eslintConfig": {
     "extends": [
@@ -66,7 +60,14 @@
     "@babel/plugin-syntax-top-level-await": "^7.14.5",
     "@tauri-apps/cli": "^1.0.0",
     "@types/react-color": "^3.0.6",
+    "autoprefixer": "^10.4.7",
     "cross-env": "^7.0.3",
-    "react-color": "^2.19.3"
+    "postcss": "^8.4.14",
+    "postcss-flexbugs-fixes": "^5.0.2",
+    "postcss-import": "^14.1.0",
+    "postcss-preset-env": "^7.7.2",
+    "precss": "^4.0.0",
+    "react-color": "^2.19.3",
+    "tailwindcss": "^3.1.4"
   }
 }
