--- a/package.json
+++ b/package.json
@@ -29,7 +29,11 @@
     "@types/react": "^18.0.14",
     "@types/react-dom": "^18.0.5",
     "@types/reactcss": "^1.2.6",
+    "autoprefixer": "10.4.5",
+    "bootstrap": "^5.2.0-beta1",
+    "bootstrap-icons": "^1.8.3",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.4.0",
     "react-dom": "^18.2.0",
     "react-error-boundary": "^3.1.4",
     "react-icons": "^4.4.0",
