--- a/package.json
+++ b/package.json
@@ -23,15 +23,14 @@
     "@tauri-apps/api": "^1.0.2",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
-    "@testing-library/user-event": "^14.2.1",
-    "@types/jest": "^28.1.4",
-    "@types/node": "^18.0.3",
+    "@testing-library/user-event": "^14.3.0",
+    "@types/jest": "^28.1.6",
+    "@types/node": "^18.0.6",
     "@types/react": "^18.0.15",
     "@types/react-dom": "^18.0.6",
     "@types/reactcss": "^1.2.6",
     "autoprefixer": "10.4.7",
-    "bootstrap": "^5.2.0-beta1",
-    "bootstrap-icons": "^1.8.3",
+    "bootstrap": "^5.2.0",
     "nth-check": "^2.1.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.4.0",
@@ -62,7 +61,7 @@
   },
   "devDependencies": {
     "@babel/plugin-syntax-top-level-await": "^7.14.5",
-    "@tauri-apps/cli": "^1.0.3",
+    "@tauri-apps/cli": "^1.0.4",
     "@types/react-color": "^3.0.6",
     "autoprefixer": "^10.4.7",
     "cross-env": "^7.0.3",
