started designing the track object and spread it out through the fader and articulation components

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,9 @@
     "lib": [
       "dom",
       "dom.iterable",
-      "esnext"
+      "esnext",
+      "es5",
+      "es6",
     ],
     "allowJs": true,
     "skipLibCheck": true,
