--- a/package.json
+++ b/package.json
@@ -20,6 +20,12 @@
     "tauri": "tauri"
   },
   "dependencies": {
+    "@react-spring/web": "^9.5.5",
+    "@use-gesture/react": "^10.2.20",
+    "localforage": "^1.10.0",
+    "react-colorful": "^5.6.1",
+    "react-media": "^1.10.0",
+    "react-router-dom": "^6.4.1",
     "@tauri-apps/api": "^1.1.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
