--- a/package.json
+++ b/package.json
@@ -21,31 +21,31 @@
   },
   "dependencies": {
     "@react-spring/web": "^9.7.3",
-    "@tauri-apps/api": "^1.4.0",
-    "@testing-library/jest-dom": "^5.17.0",
+    "@tauri-apps/api": "^1.5.0",
+    "@testing-library/jest-dom": "^6.1.3",
     "@testing-library/react": "^14.0.0",
-    "@testing-library/user-event": "^14.4.3",
-    "@types/jest": "^29.5.3",
-    "@types/node": "^20.4.7",
-    "@types/react": "^18.2.18",
-    "@types/react-dom": "^18.2.7",
-    "@types/reactcss": "^1.2.6",
-    "@use-gesture/react": "^10.2.27",
+    "@testing-library/user-event": "^14.5.1",
+    "@types/jest": "^29.5.5",
+    "@types/node": "^20.8.2",
+    "@types/react": "^18.2.25",
+    "@types/react-dom": "^18.2.10",
+    "@types/reactcss": "^1.2.7",
+    "@use-gesture/react": "^10.3.0",
     "autoprefixer": "10.4.14",
-    "bootstrap": "^5.3.1",
+    "bootstrap": "^5.3.2",
     "localforage": "^1.10.0",
     "nth-check": "^2.1.1",
     "react": "^18.2.0",
-    "react-bootstrap": "^2.8.0",
+    "react-bootstrap": "^2.9.0",
     "react-colorful": "^5.6.1",
     "react-dom": "^18.2.0",
-    "react-error-boundary": "^4.0.10",
-    "react-icons": "^4.10.1",
+    "react-error-boundary": "^4.0.11",
+    "react-icons": "^4.11.0",
     "react-media": "^1.10.0",
-    "react-router-dom": "^6.14.2",
+    "react-router-dom": "^6.16.0",
     "react-scripts": "^5.0.1",
-    "typescript": "^5.1.6",
-    "web-vitals": "^3.4.0"
+    "typescript": "^5.2.2",
+    "web-vitals": "^3.5.0"
   },
   "eslintConfig": {
     "extends": [
@@ -67,15 +67,17 @@
   },
   "devDependencies": {
     "@babel/plugin-syntax-top-level-await": "^7.14.5",
-    "@tauri-apps/cli": "^1.4.0",
-    "@types/react-color": "^3.0.6",
-    "autoprefixer": "^10.4.13",
+    "@tauri-apps/cli": "^1.5.1",
+    "@types/react-color": "^3.0.7",
+    "autoprefixer": "^10.4.16",
     "cross-env": "^7.0.3",
-    "postcss": "^8.4.27",
+    "postcss": "^8.4.31",
     "postcss-flexbugs-fixes": "^5.0.2",
     "postcss-focus-visible": "^9.0.0",
     "postcss-import": "^15.1.0",
-    "postcss-preset-env": "^9.1.0",
+    "postcss-preset-env": "^9.1.4",
+    "prettier": "^3.0.3",
+    "prettier-plugin-tailwindcss": "^0.5.5",
     "precss": "^4.0.0",
     "react-color": "^2.19.3",
     "tailwindcss": "^3.3.3"
