--- a/package.json
+++ b/package.json
@@ -13,73 +13,57 @@
     "url": "https://github.com/jpwogaman/template.io/issues"
   },
   "scripts": {
-    "start": "cross-env BROWSER=none react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
+    "build": "next build && next export -o dist",
+    "build:web": "next build",
+    "dev": "next dev",
+    "postinstall": "prisma generate",
+    "lint": "next lint",
+    "start": "next start",
     "tauri": "tauri"
   },
   "dependencies": {
+    "@next-auth/prisma-adapter": "1.0.5",
+    "@prisma/client": "^4.5.0",
     "@react-spring/web": "^9.7.3",
-    "@tauri-apps/api": "^1.5.0",
-    "@testing-library/jest-dom": "^6.1.3",
-    "@testing-library/react": "^14.0.0",
-    "@testing-library/user-event": "^14.5.1",
-    "@types/jest": "^29.5.5",
-    "@types/node": "^20.8.2",
-    "@types/react": "^18.2.25",
-    "@types/react-dom": "^18.2.10",
-    "@types/reactcss": "^1.2.7",
+    "@tanstack/react-query": "^4.16.0",
+    "@tauri-apps/api": "^1.2.0",
+    "@trpc/client": "^10.0.0",
+    "@trpc/next": "^10.0.0",
+    "@trpc/react-query": "^10.0.0",
+    "@trpc/server": "^10.0.0",
     "@use-gesture/react": "^10.3.0",
-    "autoprefixer": "10.4.14",
-    "bootstrap": "^5.3.2",
     "localforage": "^1.10.0",
-    "nth-check": "^2.1.1",
-    "react": "^18.2.0",
-    "react-bootstrap": "^2.9.0",
+    "next": "13.0.2",
+    "next-auth": "4.20.1",
+    "react": "18.2.0",
+    "react-color": "^2.19.3",
     "react-colorful": "^5.6.1",
-    "react-dom": "^18.2.0",
-    "react-error-boundary": "^4.0.11",
-    "react-icons": "^4.11.0",
-    "react-media": "^1.10.0",
-    "react-router-dom": "^6.16.0",
-    "react-scripts": "^5.0.1",
-    "typescript": "^5.2.2",
-    "web-vitals": "^3.5.0"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
+    "react-dom": "18.2.0",
+    "reactcss": "^1.2.3",
+    "superjson": "1.9.1",
+    "web-vitals": "^3.5.0",
+    "zod": "^3.18.0"
   },
   "devDependencies": {
-    "@babel/plugin-syntax-top-level-await": "^7.14.5",
-    "@tauri-apps/cli": "^1.5.1",
+    "@tauri-apps/cli": "^1.2.1",
+    "@types/node": "^18.0.0",
+    "@types/react": "^18.0.14",
     "@types/react-color": "^3.0.7",
-    "autoprefixer": "^10.4.16",
-    "cross-env": "^7.0.3",
-    "postcss": "^8.4.31",
-    "postcss-flexbugs-fixes": "^5.0.2",
-    "postcss-focus-visible": "^9.0.0",
-    "postcss-import": "^15.1.0",
-    "postcss-preset-env": "^9.1.4",
-    "prettier": "^3.0.3",
-    "prettier-plugin-tailwindcss": "^0.5.5",
-    "precss": "^4.0.0",
-    "react-color": "^2.19.3",
-    "tailwindcss": "^3.3.3"
+    "@types/react-dom": "^18.0.5",
+    "@types/reactcss": "^1.2.7",
+    "@typescript-eslint/eslint-plugin": "^5.33.0",
+    "@typescript-eslint/parser": "^5.33.0",
+    "autoprefixer": "^10.4.7",
+    "eslint": "^8.26.0",
+    "eslint-config-next": "13.0.2",
+    "postcss": "^8.4.14",
+    "prettier": "^2.7.1",
+    "prettier-plugin-tailwindcss": "^0.1.13",
+    "prisma": "^4.5.0",
+    "tailwindcss": "^3.2.0",
+    "typescript": "^4.8.4"
+  },
+  "ct3aMetadata": {
+    "initVersion": "6.11.2"
   }
 }
