--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -17,7 +17,7 @@ tauri-build = { version = "1.5.0", features = [] }
 [dependencies]
 serde_json = "1.0.104"
 serde = { version = "1.0.181", features = ["derive"] }
-tauri = { version = "1.5.0", features = ["api-all"] }
+tauri = { version = "1.5.0", features = [ "system-tray", "api-all"] }
 palette = "0.7.2"
 
 [features]
