--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@trpc/react-query": "^10.41.0",
     "@trpc/server": "^10.41.0",
     "@use-gesture/react": "^10.3.0",
+    "framer-motion": "^10.16.4",
     "next": "13.5.6",
     "next-themes": "^0.2.1",
     "react": "18.2.0",
