big! migrated to tauri 2.0, added prettier-plugin-rust

--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -12,13 +12,21 @@ rust-version = "1.73.0"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [build-dependencies]
-tauri-build = { version = "1.5.0", features = [] }
+tauri-build = { version = "2", features = [] }
 
 [dependencies]
-serde_json = "1.0.104"
-serde = { version = "1.0.181", features = ["derive"] }
-tauri = { version = "1.5.0", features = [ "system-tray", "api-all"] }
-palette = "0.7.2"
+serde_json = "1.0.131"
+serde = { version = "1.0.210", features = ["derive"] }
+tauri = { version = "2", features = ["tray-icon", "image-png"] }
+palette = "0.7.6"
+tauri-plugin-shell = "2"
+tauri-plugin-fs = "2"
+tauri-plugin-notification = "2"
+tauri-plugin-os = "2"
+tauri-plugin-dialog = "2"
+tauri-plugin-process = "2"
+tauri-plugin-clipboard-manager = "2.0.0-beta.0"
+tauri-plugin-http = "2"
 
 [features]
 # by default Tauri runs in production mode
@@ -27,3 +35,8 @@ default = [ "custom-protocol" ]
 # this feature is used used for production builds where `devPath` points to the filesystem
 # DO NOT remove this
 custom-protocol = [ "tauri/custom-protocol" ]
+png = []
+
+
+[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
+tauri-plugin-global-shortcut = "2"
