--- a/package.json
+++ b/package.json
@@ -23,17 +23,26 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.6.0",
-    "@prisma/client": "^5.20.0",
-    "@react-spring/web": "^9.7.4",
+    "@prisma/client": "^5.21.1",
+    "@react-spring/web": "^9.7.5",
     "@tanstack/react-query": "^4.36.1",
-    "@tauri-apps/api": "^1.6.0",
+    "@tauri-apps/api": "^2.0.2",
+    "@tauri-apps/plugin-clipboard-manager": "^2.0.0",
+    "@tauri-apps/plugin-dialog": "~2",
+    "@tauri-apps/plugin-fs": "~2",
+    "@tauri-apps/plugin-global-shortcut": "~2",
+    "@tauri-apps/plugin-http": "~2",
+    "@tauri-apps/plugin-notification": "~2",
+    "@tauri-apps/plugin-os": "~2",
+    "@tauri-apps/plugin-process": "~2",
+    "@tauri-apps/plugin-shell": "~2",
     "@trpc/client": "^10.45.2",
     "@trpc/next": "^10.45.2",
     "@trpc/react-query": "^10.45.2",
     "@trpc/server": "^10.45.2",
     "@use-gesture/react": "^10.3.1",
-    "framer-motion": "^11.5.6",
-    "next": "14.2.13",
+    "framer-motion": "^11.11.9",
+    "next": "14.2.15",
     "next-themes": "^0.3.0",
     "react": "18.3.1",
     "react-color": "^2.19.3",
@@ -44,25 +53,29 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
-    "@tauri-apps/cli": "^1.6.2",
-    "@types/node": "^22.6.1",
-    "@types/react": "^18.3.9",
+    "@tauri-apps/cli": "^2.0.3",
+    "@types/node": "^22.7.6",
+    "@types/react": "^18.3.11",
     "@types/react-color": "^3.0.12",
-    "@types/react-dom": "^18.3.0",
+    "@types/react-dom": "^18.3.1",
     "@types/reactcss": "^1.2.12",
-    "@typescript-eslint/eslint-plugin": "^8.7.0",
-    "@typescript-eslint/parser": "^8.7.0",
+    "@typescript-eslint/eslint-plugin": "^8.10.0",
+    "@typescript-eslint/parser": "^8.10.0",
     "autoprefixer": "^10.4.20",
-    "eslint": "^9.11.1",
-    "eslint-config-next": "14.2.13",
+    "eslint": "^9.13.0",
+    "eslint-config-next": "14.2.15",
     "postcss": "^8.4.47",
     "prettier": "^3.3.3",
-    "prettier-plugin-tailwindcss": "^0.6.7",
-    "prisma": "^5.20.0",
-    "tailwindcss": "^3.4.13",
-    "typescript": "^5.6.2"
+    "prettier-plugin-rust": "^0.1.9",
+    "prettier-plugin-tailwindcss": "^0.6.8",
+    "prisma": "^5.21.1",
+    "tailwindcss": "^3.4.14",
+    "typescript": "^5.6.3"
   },
   "ct3aMetadata": {
     "initVersion": "6.11.2"
+  },
+  "engines": {
+    "node": "18.20.4"
   }
 }
