--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,24 +1,34 @@
 {
   "compilerOptions": {
-    "target": "es2017",
+    /* Base Options: */
+    "esModuleInterop": true,
+    "skipLibCheck": true,
+    "target": "es2022",
+    "allowJs": true,
+    "resolveJsonModule": true,
+    "moduleDetection": "force",
+    "isolatedModules": true,
+    /* Strictness */
+    "strict": true,
+    "noUncheckedIndexedAccess": true,
+    "checkJs": true,
+    /* Bundled projects */
     "lib": [
       "dom",
       "dom.iterable",
-      "esnext"
+      "ES2022"
     ],
-    "allowJs": true,
-    "skipLibCheck": true,
-    "strict": true,
-    "forceConsistentCasingInFileNames": true,
     "noEmit": true,
-    "esModuleInterop": true,
-    "module": "esnext",
-    "moduleResolution": "node",
-    "resolveJsonModule": true,
-    "isolatedModules": true,
+    "module": "ESNext",
+    "moduleResolution": "Bundler",
     "jsx": "preserve",
+    "plugins": [
+      {
+        "name": "next"
+      }
+    ],
     "incremental": true,
-    "noUncheckedIndexedAccess": true,
+    /* Path Aliases */
     "baseUrl": ".",
     "paths": {
       "@/*": [
@@ -27,13 +37,20 @@
     }
   },
   "include": [
-    "next-env.d.ts",
+    "**/*.cjs",
+    "**/*.js",
     "**/*.ts",
     "**/*.tsx",
-    "**/*.cjs",
-    "**/*.mjs"
+    ".next/types/**/*.ts",
+    "eslint.config.js",
+    "next-env.d.ts",
+    "dist/types/**/*.ts"
   ],
   "exclude": [
     "node_modules"
+  ],
+  "forceConsistentCasingInFileNames": true,
+  "types": [
+    "vitest/globals"
   ]
 }
