trying a setup from https://github.com/taecontrol/orion/ to get access to sqlite

--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,10 @@
 /prisma/db.postgresql
 /prisma/db.postgresql-journal
 /prisma/db.sqlite
+/db.sqlite
+/diesel.toml
+/migrations
+/src-tauri/diesel.toml
 
 # next.js
 /.next/
