--- a/package.json
+++ b/package.json
@@ -19,14 +19,15 @@
     "lint": "next lint",
     "start": "next start",
     "deps": "ncu --interactive --format group",
-    "tauri": "tauri"
+    "tauri": "tauri",
+    "count": "count-lines-in-repo.bat"
   },
   "ct3aMetadata": {
     "initVersion": "6.11.2"
   },
   "engines": {
     "node": "18.20.x",
-    "pnpm": "9.13.x"
+    "pnpm": "9.15.x"
   },
   "pnpm": {
     "peerDependencyRules": {
@@ -50,10 +51,10 @@
     "@tauri-apps/plugin-shell": "~2",
     "@t3-oss/env-nextjs": "^0.11.1",
     "@use-gesture/react": "^10.3.1",
-    "framer-motion": "^11.16.0",
-    "next": "15.1.3",
-    "@next/bundle-analyzer": "^15.1.3",
-    "@next/env": "^15.1.3",
+    "framer-motion": "^11.18.1",
+    "next": "15.1.5",
+    "@next/bundle-analyzer": "^15.1.5",
+    "@next/env": "^15.1.5",
     "next-themes": "^0.4.4",
     "react": "18.3.1",
     "react-color": "^2.19.3",
@@ -65,26 +66,26 @@
     "zod": "^3.24.1"
   },
   "devDependencies": {
-    "@tauri-apps/cli": "^2.2.2",
-    "@types/node": "^22.10.5",
+    "@tauri-apps/cli": "^2.2.5",
+    "@types/node": "^22.10.7",
     "@types/react": "^18.3.12",
     "@types/react-color": "^3.0.13",
     "@types/react-dom": "^18.3.1",
     "@types/reactcss": "^1.2.13",
     "@types/eslint": "^9.6.1",
     "@types/eslint__eslintrc": "^2.1.2",
-    "@typescript-eslint/eslint-plugin": "^8.19.1",
-    "@typescript-eslint/parser": "^8.19.1",
+    "@typescript-eslint/eslint-plugin": "^8.20.0",
+    "@typescript-eslint/parser": "^8.20.0",
     "@eslint/eslintrc": "^3.2.0",
-    "@eslint/js": "^9.17.0",
+    "@eslint/js": "^9.18.0",
     "autoprefixer": "^10.4.20",
-    "eslint": "^9.17.0",
-    "eslint-config-next": "15.1.3",
-    "postcss": "^8.4.49",
+    "eslint": "^9.18.0",
+    "eslint-config-next": "15.1.5",
+    "postcss": "^8.5.1",
     "prettier": "^3.4.2",
-    "prettier-plugin-tailwindcss": "^0.6.9",
+    "prettier-plugin-tailwindcss": "^0.6.10",
     "prettier-plugin-rust": "^0.1.9",
     "tailwindcss": "^3.4.17",
-    "typescript": "^5.7.2"
+    "typescript": "^5.7.3"
   }
 }
