added script for automatically generating bindings for rust struct -> typescript types

--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -10,6 +10,9 @@ edition = "2021"
 rust-version = "1.84.0"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+[[bin]]
+name = "bindings"
+path = "./bin/bindings.rs"
 
 [build-dependencies]
 tauri-build = { version = "2.0.3", features = [] }
@@ -30,6 +33,7 @@ libsqlite3-sys = { version = "0.30.1", features = ["bundled"] }
 reqwest = { version = "0.12.9", features = ["json"] }
 chrono = { version = "0.4.38", features = ["serde"] }
 uuid = "1.11.0"
+ts-rs = "10.1"
 
 tauri-plugin-shell = "2.0.2"
 tauri-plugin-fs = "2.1.0"
