refactor: rename bindings binary to bindings_index and add clean_bindings script

--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "deps": "ncu --interactive --format group",
     "tauri": "tauri",
     "count": "count-lines-in-repo.bat",
-    "bindings": "cd src-tauri && cargo test && cargo run --bin bindings && npx prettier --write \"src/models/*.ts\""
+    "clean_bindings": "del /s /q src-tauri\\src\\models\\*.ts",
+    "bindings": "pnpm clean_bindings && cd src-tauri && cargo test && cargo run --bin bindings_index && npx prettier --write \"src/models/*.ts\""
   },
   "ct3aMetadata": {
     "initVersion": "6.11.2"
