--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -11,8 +11,8 @@ rust-version = "1.84.0"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 [[bin]]
-name = "bindings"
-path = "./bin/bindings.rs"
+name = "bindings_index"
+path = "./bin/bindings_index.rs"
 
 [build-dependencies]
 tauri-build = { version = "2.0.3", features = [] }
