--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -20,7 +20,6 @@ tauri-build = { version = "2.0.3", features = [] }
 [dependencies]
 serde_json = "1.0.133"
 serde = { version = "1.0.215", features = ["derive"] }
-tauri = { version = "2.1.1", features = ["tray-icon", "image-png"] }
 palette = "0.7.6"
 log = "0.4.22"
 tokio = { version = "1.42.0", features = ["macros", "rt-multi-thread", "full"] }
@@ -35,6 +34,7 @@ chrono = { version = "0.4.38", features = ["serde"] }
 uuid = "1.11.0"
 ts-rs = "10.1"
 
+tauri = { version = "2.0", features = ["tray-icon", "image-png"] }
 tauri-plugin-shell = "2.0.2"
 tauri-plugin-fs = "2.1.0"
 tauri-plugin-notification = "2.0.1"
@@ -44,6 +44,9 @@ tauri-plugin-dialog = "2.0.4"
 tauri-plugin-process = "2.0.1"
 tauri-plugin-clipboard-manager = "2.1.0-beta.7"
 tauri-plugin-http = "2.0.4"
+specta = "=2.0.0-rc.22"
+specta-typescript = "0.0.9"
+tauri-specta = { version = "=2.0.0-rc.21", features = ["derive", "typescript"] }
 
 [features]
 # by default Tauri runs in production mode
