feat: add custom error handling for deletion commands and update dependencies

--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -43,6 +43,7 @@ tauri-plugin-http = "2.0.4"
 specta = "=2.0.0-rc.22"
 specta-typescript = "0.0.9"
 tauri-specta = { version = "=2.0.0-rc.21", features = ["derive", "typescript"] }
+thiserror = "2.0.11"
 
 [features]
 # by default Tauri runs in production mode
