feat: add custom manual bindings for types and update context types for better type safety

--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "start": "next start",
     "deps": "ncu --interactive --format group",
     "tauri": "tauri",
-    "count": "count-lines-in-repo.bat"
+    "count": "count-lines-in-repo.bat",
+    "bindings": "cd src-tauri && cargo test && cargo run --bin bindings_custom_types"
   },
   "ct3aMetadata": {
     "initVersion": "6.11.2"
