--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -10,6 +10,10 @@ edition = "2021"
 rust-version = "1.84.0"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+[[bin]]
+name = "bindings_custom_types"
+path = "./src/bin/bindings_custom_types.rs"
+
 [build-dependencies]
 tauri-build = { version = "2.0.3", features = [] }
 
