--- a/package.json
+++ b/package.json
@@ -39,8 +39,11 @@
     }
   },
   "dependencies": {
-    "@fortawesome/fontawesome-free": "^6.7.2",
+    "@next/bundle-analyzer": "^15.1.6",
+    "@next/env": "^15.1.6",
+    "@react-icons/all-files": "^4.1.0",
     "@react-spring/web": "^9.7.5",
+    "@t3-oss/env-nextjs": "^0.11.1",
     "@tauri-apps/api": "^2.2.0",
     "@tauri-apps/plugin-clipboard-manager": "^2.2.1",
     "@tauri-apps/plugin-dialog": "~2",
@@ -51,43 +54,41 @@
     "@tauri-apps/plugin-os": "~2",
     "@tauri-apps/plugin-process": "~2",
     "@tauri-apps/plugin-shell": "~2",
-    "@t3-oss/env-nextjs": "^0.11.1",
     "@use-gesture/react": "^10.3.1",
     "framer-motion": "^11.18.1",
     "next": "15.1.6",
-    "@next/bundle-analyzer": "^15.1.6",
-    "@next/env": "^15.1.6",
     "next-themes": "^0.4.4",
     "react": "18.3.1",
     "react-color": "^2.19.3",
     "react-colorful": "^5.6.1",
     "react-dom": "18.3.1",
+    "react-icons": "^5.4.0",
     "reactcss": "^1.2.3",
     "server-only": "^0.0.1",
     "superjson": "2.2.2",
     "zod": "^3.24.1"
   },
   "devDependencies": {
+    "@eslint/eslintrc": "^3.2.0",
+    "@eslint/js": "^9.20.0",
+    "@tailwindcss/postcss": "^4.0.5",
     "@tauri-apps/cli": "^2.2.7",
+    "@types/eslint": "^9.6.1",
+    "@types/eslint__eslintrc": "^2.1.2",
     "@types/node": "^22.13.1",
     "@types/react": "^18.3.12",
     "@types/react-color": "^3.0.13",
     "@types/react-dom": "^18.3.1",
     "@types/reactcss": "^1.2.13",
-    "@types/eslint": "^9.6.1",
-    "@types/eslint__eslintrc": "^2.1.2",
     "@typescript-eslint/eslint-plugin": "^8.23.0",
     "@typescript-eslint/parser": "^8.23.0",
-    "@eslint/eslintrc": "^3.2.0",
-    "@eslint/js": "^9.20.0",
-    "autoprefixer": "^10.4.20",
     "eslint": "^9.20.0",
     "eslint-config-next": "15.1.6",
     "postcss": "^8.5.1",
     "prettier": "^3.4.2",
-    "prettier-plugin-tailwindcss": "^0.6.10",
     "prettier-plugin-rust": "^0.1.9",
-    "tailwindcss": "^3.4.17",
+    "prettier-plugin-tailwindcss": "^0.6.11",
+    "tailwindcss": "^4.0.5",
     "typescript": "^5.7.3"
   }
 }
