feat: update dependencies and replace framer-motion with motion for improved performance

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "lint": "next lint",
     "start": "next start",
     "deps": "ncu --interactive --format group",
+    "depsProd": "ncu --interactive --dep prod --format group",
     "tauri": "tauri",
     "count": "count-lines-in-repo.bat",
     "bindings": "cd src-tauri && cargo test && cargo run --bin bindings_custom_types",
@@ -55,7 +56,7 @@
     "@tauri-apps/plugin-process": "~2",
     "@tauri-apps/plugin-shell": "~2",
     "@use-gesture/react": "^10.3.1",
-    "framer-motion": "^11.18.1",
+    "motion": "^12.4.1",
     "next": "15.1.6",
     "next-themes": "^0.4.4",
     "react": "18.3.1",
@@ -85,7 +86,7 @@
     "eslint": "^9.20.0",
     "eslint-config-next": "15.1.6",
     "postcss": "^8.5.1",
-    "prettier": "^3.4.2",
+    "prettier": "^3.5.0",
     "prettier-plugin-rust": "^0.1.9",
     "prettier-plugin-tailwindcss": "^0.6.11",
     "tailwindcss": "^4.0.5",
