--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "reactcss": "^1.2.3",
     "server-only": "^0.0.1",
     "superjson": "2.2.2",
+    "tailwind-merge": "^3.0.1",
     "zod": "^3.24.1"
   },
   "devDependencies": {
