--- a/package.json
+++ b/package.json
@@ -85,6 +85,8 @@
     "@typescript-eslint/parser": "^8.24.0",
     "eslint": "^9.20.0",
     "eslint-config-next": "15.1.6",
+    "eslint-plugin-react-compiler": "19.0.0-beta-30d8a17-20250209",
+    "babel-plugin-react-compiler": "19.0.0-beta-30d8a17-20250209",
     "postcss": "^8.5.1",
     "prettier": "^3.5.0",
     "prettier-plugin-rust": "^0.1.9",
