refactor: update ItemsArtListTog schema to use art_layers_on and art_layers_off fields, also created new migrations command for dev

--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "tauri": "tauri",
     "count": "count-lines-in-repo.bat",
     "bindings": "cd src-tauri && cargo test && cargo run --bin bindings_custom_types",
-    "full_clean": "cd src-tauri && cargo clean && cd.. && rm -rf node_modules/ && rm -rf dist/ && rm -rf .next/ && pnpm install && pnpm tauri dev"
+    "full_clean": "cd src-tauri && cargo clean && cd.. && rm -rf node_modules/ && rm -rf dist/ && rm -rf .next/ && pnpm install && pnpm tauri dev",
+    "migrations": "cd src-tauri && ENV DATABASE_URL=\"file:./migrations.sqlite\" diesel migration run && rm -rf ./migrations.sqlite"
   },
   "ct3aMetadata": {
     "initVersion": "6.11.2"
