--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -1,19 +1,33 @@
 [package]
 name = "template-io"
 version = "0.0.1"
-description = "template-io"
 authors = ["JP Wogaman II"]
-license = "MIT"
 repository = "https://github.com/jpwogaman/template.io"
-default-run = "template-io"
+description = "Workflow enhancement for Open Stage Control, VEP, & Cubase."
+license = "MIT"
 edition = "2021"
-rust-version = "1.84.0"
+rust-version = "1.81.0"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 [build-dependencies]
 tauri-build = { version = "2.0.3", features = [] }
 
+[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
+tauri-plugin-global-shortcut = "2.0.1"
+tauri-plugin-updater = "2"
+
 [dependencies]
+tauri = { version = "2.0", features = ["tray-icon", "image-png"] }
+tauri-plugin-shell = "2.0.2"
+tauri-plugin-fs = "2.1.0"
+tauri-plugin-notification = "2.0.1"
+tauri-plugin-os = "2.0.1"
+tauri-plugin-log = "2.0.3"
+tauri-plugin-dialog = "2.0.4"
+tauri-plugin-process = "2.0.1"
+tauri-plugin-clipboard-manager = "2.1.0-beta.7"
+tauri-plugin-http = "2.0.4"
+
 serde_json = "1.0.133"
 serde = { version = "1.0.215", features = ["derive"] }
 palette = "0.7.6"
@@ -28,18 +42,6 @@ libsqlite3-sys = { version = "0.30.1", features = ["bundled"] }
 reqwest = { version = "0.12.9", features = ["json"] }
 chrono = { version = "0.4.38", features = ["serde"] }
 uuid = "1.11.0"
-
-tauri = { version = "2.0", features = ["tray-icon", "image-png"] }
-tauri-plugin-shell = "2.0.2"
-tauri-plugin-fs = "2.1.0"
-tauri-plugin-notification = "2.0.1"
-tauri-plugin-os = "2.0.1"
-tauri-plugin-log = "2.0.3"
-tauri-plugin-dialog = "2.0.4"
-tauri-plugin-process = "2.0.1"
-tauri-plugin-clipboard-manager = "2.1.0-beta.7"
-tauri-plugin-http = "2.0.4"
-
 specta = "=2.0.0-rc.22"
 specta-typescript = "0.0.9"
 tauri-specta = { version = "=2.0.0-rc.21", features = ["derive", "typescript"] }
@@ -57,6 +59,3 @@ custom-protocol = [ "tauri/custom-protocol" ]
 png = []
 
 
-[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
-tauri-plugin-global-shortcut = "2.0.1"
-tauri-plugin-updater = "2"
