--- a/package.json
+++ b/package.json
@@ -26,15 +26,8 @@
     "initVersion": "6.11.2"
   },
   "engines": {
-    "node": "18.20.x",
-    "pnpm": "9.15.x"
-  },
-  "pnpm": {
-    "peerDependencyRules": {
-      "allowedVersions": {
-        "eslint": "9"
-      }
-    }
+    "node": "22",
+    "pnpm": "10"
   },
   "dependencies": {
     "@next/bundle-analyzer": "^15.2.4",
@@ -53,7 +46,7 @@
     "@tauri-apps/plugin-shell": "~2",
     "@tauri-apps/plugin-updater": "~2",
     "@use-gesture/react": "^10.3.1",
-    "motion": "^12.6.1",
+    "motion": "^12.6.2",
     "next": "15.2.4",
     "next-themes": "^0.4.6",
     "react": "19.0.0",
@@ -73,7 +66,7 @@
     "@tailwindcss/postcss": "^4.0.17",
     "@tauri-apps/cli": "^2.4.0",
     "@types/eslint": "^9.6.1",
-    "@types/node": "^22.13.13",
+    "@types/node": "^22.13.14",
     "@types/react": "^19.0.12",
     "@types/react-color": "^3.0.13",
     "@types/react-dom": "^19.0.4",
