--- a/package.json
+++ b/package.json
@@ -41,8 +41,8 @@
     }
   },
   "dependencies": {
-    "@next/bundle-analyzer": "^15.3.0",
-    "@next/env": "^15.3.0",
+    "@next/bundle-analyzer": "^15.3.1",
+    "@next/env": "^15.3.1",
     "@react-icons/all-files": "^4.1.0",
     "@t3-oss/env-nextjs": "^0.12.0",
     "@tauri-apps/api": "^2.5.0",
@@ -56,8 +56,8 @@
     "@tauri-apps/plugin-process": "~2",
     "@tauri-apps/plugin-shell": "~2",
     "@use-gesture/react": "^10.3.1",
-    "motion": "^12.7.3",
-    "next": "15.3.0",
+    "motion": "^12.9.1",
+    "next": "15.3.1",
     "next-themes": "^0.4.6",
     "react": "19.1.0",
     "react-color": "^2.19.3",
@@ -68,25 +68,25 @@
     "server-only": "^0.0.1",
     "superjson": "2.2.2",
     "tailwind-merge": "^3.2.0",
-    "zod": "^3.24.2"
+    "zod": "^3.24.3"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.3.1",
-    "@eslint/js": "^9.24.0",
+    "@eslint/js": "^9.25.1",
     "@tailwindcss/postcss": "^4.1.4",
     "@tauri-apps/cli": "^2.5.0",
     "@types/eslint": "^9.6.1",
-    "@types/node": "^22.14.1",
+    "@types/node": "^22.15.0",
     "@types/react": "^19.1.2",
     "@types/react-color": "^3.0.13",
     "@types/react-dom": "^19.1.2",
     "@types/reactcss": "^1.2.13",
-    "@typescript-eslint/eslint-plugin": "^8.30.1",
-    "@typescript-eslint/parser": "^8.30.1",
-    "babel-plugin-react-compiler": "19.0.0-beta-ebf51a3-20250411",
-    "eslint": "^9.24.0",
-    "eslint-config-next": "15.3.0",
-    "eslint-plugin-react-compiler": "19.0.0-beta-ebf51a3-20250411",
+    "@typescript-eslint/eslint-plugin": "^8.31.0",
+    "@typescript-eslint/parser": "^8.31.0",
+    "babel-plugin-react-compiler": "19.1.0-rc.1",
+    "eslint": "^9.25.1",
+    "eslint-config-next": "15.3.1",
+    "eslint-plugin-react-compiler": "19.1.0-rc.1",
     "postcss": "^8.5.3",
     "prettier": "^3.5.3",
     "prettier-plugin-rust": "^0.1.9",
