--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -6,46 +6,46 @@ repository = "https://github.com/jpwogaman/template.io"
 description = "Workflow enhancement for Open Stage Control, VEP, & Cubase."
 license = "MIT"
 edition = "2021"
-rust-version = "1.81.0"
+rust-version = "1.84.0"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 [build-dependencies]
-tauri-build = { version = "2.0.3", features = [] }
+tauri-build = { version = "2.2.0", features = [] }
 
 [target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
-tauri-plugin-global-shortcut = "2.0.1"
-tauri-plugin-updater = "2"
+tauri-plugin-global-shortcut = "2.2.0"
+tauri-plugin-updater = "2.7.1"
 
 [dependencies]
-tauri = { version = "2.0", features = ["tray-icon", "image-png"] }
-tauri-plugin-shell = "2.0.2"
-tauri-plugin-fs = "2.1.0"
-tauri-plugin-notification = "2.0.1"
-tauri-plugin-os = "2.0.1"
-tauri-plugin-log = "2.0.3"
-tauri-plugin-dialog = "2.0.4"
-tauri-plugin-process = "2.0.1"
-tauri-plugin-clipboard-manager = "2.1.0-beta.7"
-tauri-plugin-http = "2.0.4"
+tauri = { version = "2.5.1", features = ["tray-icon", "image-png"] }
+tauri-plugin-shell = "2.2.1"
+tauri-plugin-fs = "2.2.1"
+tauri-plugin-notification = "2.2.2"
+tauri-plugin-os = "2.2.1"
+tauri-plugin-log = "2.4.0"
+tauri-plugin-dialog = "2.2.1"
+tauri-plugin-process = "2.2.1"
+tauri-plugin-clipboard-manager = "2.2.2"
+tauri-plugin-http = "2.4.3"
 
-serde_json = "1.0.133"
-serde = { version = "1.0.215", features = ["derive"] }
+serde_json = "1.0.140"
+serde = { version = "1.0.219", features = ["derive"] }
 palette = "0.7.6"
-log = "0.4.22"
-tokio = { version = "1.42.0", features = ["macros", "rt-multi-thread", "full"] }
+log = "0.4.27"
+tokio = { version = "1.44.2", features = ["macros", "rt-multi-thread", "full"] }
 tracing = "0.1.41"
 tracing-subscriber = "0.3.19"
-dirs = "5.0.1"
-diesel = { version = "2.2.6", features = ["sqlite", "chrono"] }
+dirs = "6.0.0"
+diesel = { version = "2.2.9", features = ["sqlite", "chrono"] }
 diesel_migrations = "2.2.0"
 libsqlite3-sys = { version = "0.30.1", features = ["bundled"] }
-reqwest = { version = "0.12.9", features = ["json"] }
-chrono = { version = "0.4.38", features = ["serde"] }
-uuid = "1.11.0"
-specta = "=2.0.0-rc.22"
+reqwest = { version = "0.12.15", features = ["json"] }
+chrono = { version = "0.4.40", features = ["serde"] }
+uuid = "1.16.0"
+specta = "2.0.0-rc.22"
 specta-typescript = "0.0.9"
-tauri-specta = { version = "=2.0.0-rc.21", features = ["derive", "typescript"] }
-thiserror = "2.0.11"
+tauri-specta = { version = "2.0.0-rc.21", features = ["derive", "typescript"] }
+thiserror = "2.0.12"
 colored = "3.0.0"
 regex = "1.11.1"
 
